[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enigma-machine"
version = "0.1.0"
description = "Klasyczna maszyna Enigma w Pythonie (rotory I–V, podwójny krok, Ringstellung, plugboard, reflektory B/C)"
authors = [{name = "Student"}]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
ui = ["pygame>=2.5.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["enigma*"]